revert back to page before

--- a/docs/admins/c220.md
+++ b/docs/admins/c220.md
@@ -1,3 +1,4 @@
 # c220 and LXD
 
-See [mrjones' blog post](https://blog.plip.com/2017/09/24/from-zero-to-lxd-installing-a-private-compute-cloud-on-a-cisco-c220-m4sff/) - it explains it all!
+See [mrjones' blog post](https://blog.plip.com/2017/09/24/from-zero-to-lxd-installing-a-private-compute-cloud-on-a-cisco-c220-m4sff/) 
+
