added descriptions to articles, updated main index

--- a/docs/Equipment/3D Printing/F400-s.md
+++ b/docs/Equipment/3D Printing/F400-s.md
@@ -1,3 +1,11 @@
+---
+description: NEEDS WORK A large 3D printer with an enclosure.
+tags:
+    - STUB
+    - equipment
+    - 3d printing
+    - fdm
+---
 # Fusion 3 F400-s
 
 ## Current Status
